--- a/firebase.json
+++ b/firebase.json
@@ -9,8 +9,7 @@
     "rewrites": [
       {
         "source": "**",
-        "destination": "/index.html",
-        "images": "/images/**"
+        "destination": "/index.html"
       }
     ]
   }
