--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.5",
     "bootstrap": "^5.3.2",
+    "firebase": "^10.12.2",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
