--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "@fortawesome/vue-fontawesome": "^3.0.5",
     "bootstrap": "^5.3.3",
     "firebase": "^10.12.2",
+    "pinia": "^3.0.3",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.6.2",
+    "@vitejs/plugin-vue": "^6.0.1",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
-    "vite": "^5.0.10"
+    "vite": "^7.1.9"
   }
 }
